--- a/xcode/diary/diary/en.lproj/Main.storyboard
+++ b/xcode/diary/diary/en.lproj/Main.storyboard
@@ -291,6 +291,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                     </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="eVl-eY-pXM">
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                         <connections>
                             <action selector="refresh:" destination="6jI-XC-TSV" eventType="valueChanged" id="Jdt-kN-CVj"/>
                         </connections>
